--- a/thinkmate/styles/Home.module.css
+++ b/thinkmate/styles/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-    background: linear-gradient(135deg, #a8c0ff 0%, #c2e97b 100%);
+    background: linear-gradient(135deg, #ffffff 0%, #dddddd 100%);
     height: 97vh;
     width: 97vw;
     margin: -2vh 2vw 2vh -2vw;
