--- a/thinkmate/styles/Home.module.css
+++ b/thinkmate/styles/Home.module.css
@@ -46,33 +46,33 @@
   .mainContent {
     max-width: 100vw;
   }
-  
-  @media (max-width: 100vw) {
-    .mainContent {
-      grid-template-columns: 1fr;
 
-    }
+  .panelGroup{
+    max-width: 30rem;
+    position: absolute;
+    bottom: 5vh;  
   }
+  
 
   .pageButton {
-    background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
-    width: 10%;
-    height: 40px;
-    margin: px auto 10px auto;
+    width: 9rem;
+    height: 3rem;
     background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(10px);
     border-radius:20px;
     border: 2px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-    color: #808080;
-    text-align: center;
-    font-size: 1rem;
-    padding: '0.6rem 1rem';
-    cursor: 'pointer';
+    color: #363636;
+    font-size: 0.9rem;
+    font-weight: 700;
+    padding: 0.6rem 1rem;
+    cursor: pointer;
+    /* use Sejong if available */
+   font-family: 'NanumSquareNeo', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
   }
 
   .pageButton:hover {
     background: rgba(255, 255, 255, 0.9);
     transform: translateY(-2px);
-    box-shadow: 0 10px 25px rgba(99, 102, 241, 0.3);
+    box-shadow: 0 5px 25px rgba(72, 72, 72, 0.3);
   }
