--- a/thinkmate/styles/InterestForm.module.css
+++ b/thinkmate/styles/InterestForm.module.css
@@ -1,3 +1,5 @@
+
+
 .formPanel {
     background: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(10px);
@@ -7,8 +9,8 @@
     box-shadow: 0 10px 25px rgba(0,0,0,0.1);
     height: fit-content;
     position: absolute;
-    right: 1.6vw; /* adjust x position by changing this value */
-    /* be responsive on narrow viewports */
+    top: 0vh;
+    right: 0vw; 
     min-width: 17rem;
     max-width: calc(30vw - 7rem);
     overflow-x: hidden; /* prevent horizontal scroll/overflow */
@@ -17,8 +19,8 @@
     overflow-y: auto;
     animation: float 3s ease-in-out infinite;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-     opacity: 0.9;
-
+    opacity: 0.9;
+    font-family: 'NanumSquareNeo', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
   }
   .formPanel:hover {
       transform: translateY(-3px) scale(1);
@@ -26,7 +28,6 @@
     }
 
   .transparentBox {
-    background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
     padding: 2rem;
     backdrop-filter: blur(10px);
     border-radius: 0.2rem;
@@ -37,23 +38,26 @@
   }
   
   .formTitle {
-    font-size: 1.3rem;
-    font-weight: 400;
-    color: #374151;
+    font-size: 1.8rem;
+    color: #232323;
     margin-bottom: 1rem;
+    font-family: cursive, 'Apple Chancery';
+    font-weight: 900;
   }
   
   .formGroup {
     margin-bottom: 1rem;
+   
   }
   
   .label {
     display: block;
-    font-size: 0.875rem;
-    font-weight: 400;
+    font-size: 0.8rem;
+    line-height: 1.7;
+    font-weight: 600;
     color: #374151;
     margin-bottom: 0.5rem;
-  }
+     }
   
   .input {
     width: 90%;
@@ -104,10 +108,11 @@
     padding: 0.7rem;
     border: none;
     border-radius: 0.5rem;
-    font-size: 0.875rem;
-    font-weight: 400;
+    font-size: 1rem;
+    font-weight: 500;
     cursor: pointer;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
+    font-family: 'NanumSquareNeo', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
   }
   
   .button:hover {
