--- a/thinkmate/styles/InterestForm.module.css
+++ b/thinkmate/styles/InterestForm.module.css
@@ -3,13 +3,13 @@
 .formPanel {
     background: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(10px);
-    border-radius: 5px;
-    border: 0.5px solid rgba(255, 255, 255, 0.3);
+    border-radius: 2rem;
+    border: 1.5px solid rgba(255, 255, 255, 1);
     padding: 1rem;
     box-shadow: 0 10px 25px rgba(0,0,0,0.1);
     height: fit-content;
     position: absolute;
-    top: 0vh;
+    top: 5vh;
     right: 0vw; 
     min-width: 17rem;
     max-width: calc(30vw - 7rem);
@@ -28,7 +28,7 @@
     }
 
   .transparentBox {
-    padding: 2rem;
+    padding: 1rem;
     backdrop-filter: blur(10px);
     border-radius: 0.2rem;
     border: 0.4px solid rgba(255, 255, 255, 0.2);
@@ -39,7 +39,8 @@
   
   .formTitle {
     font-size: 1.8rem;
-    color: #232323;
+    color: hsl(0, 0%, 14%);
+    margin-top: 0.5 rem;
     margin-bottom: 1rem;
     font-family: cursive, 'Apple Chancery';
     font-weight: 900;
@@ -62,23 +63,24 @@
   .input {
     width: 90%;
     padding: 0.75rem;
-    border: 1px solid #d1d5db;
-    border-radius: 0.5rem;
+    border: 2px solid #d1d5db;
+    border-radius: 2rem;
     font-size: 0.875rem;
     transition: all 0.2s ease;
   }
   
   .input:focus {
     outline: none;
-    border-color: #6366f1;
+    border-color: #947C7C;
     box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.1);
   }
   
   .select {
     width: 100%;
     padding: 0.75rem;
-    border: 1px solid #d1d5db;
-    border-radius: 0.5rem;
+    margin-right: 2rem;
+    border: 2px solid #d1d5db;
+    border-radius: 2rem;
     background: white;
     font-size: 0.875rem;
   }
@@ -103,12 +105,13 @@
   
   .button {
     width: 100%;
+    max-height: 3rem;
     background: linear-gradient(135deg, #C1A9A9 0%, #947C7C 100%);
     color: white;
     padding: 0.7rem;
     border: none;
-    border-radius: 0.5rem;
-    font-size: 1rem;
+    border-radius: 2rem;
+    font-size: 1.2rem;
     font-weight: 500;
     cursor: pointer;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
