--- a/thinkmate/styles/InterestForm.module.css
+++ b/thinkmate/styles/InterestForm.module.css
@@ -44,6 +44,10 @@
     margin-bottom: 1rem;
     font-family: cursive, 'Apple Chancery';
     font-weight: 900;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none;    /* Firefox */
+    -ms-user-select: none;     /* IE 10+ */
+    user-select: none;         /* Standard */
   }
   
   .formGroup {
