--- a/thinkmate/styles/Home.module.css
+++ b/thinkmate/styles/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-    background: linear-gradient(135deg, #ffffff 0%, #dddddd 100%);
+    background: linear-gradient(270deg, #ffffff 10%, #ffffff 100%);
     height: 98vh;
     width: 98vw;
     margin: -5vh 0vw 0vh 0vw;
@@ -22,7 +22,7 @@
   .fullScreenBox {
     margin: 5vh 0vw 0 2vw;
     height: 100%;
-    background: rgba(255, 255, 255, 0.15);
+    background: rgba(255, 255, 255, 0.7);
     backdrop-filter: blur(10px);
     display: flex;
     padding: 0.2rem;
