--- a/thinkmate/styles/InterestForm.module.css
+++ b/thinkmate/styles/InterestForm.module.css
@@ -34,7 +34,7 @@
     border: 0.4px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
     color: white;
-    height: fit-content;
+    height: 100%;
   }
   
   .formTitle {
