--- a/thinkmate/styles/Analysis.module.css
+++ b/thinkmate/styles/Analysis.module.css
@@ -46,7 +46,7 @@
 
 .wrapper {
     align-items: center;
-    background: linear-gradient(135deg, #a8c0ff 0%, #c2e97b 100%);
+    background: linear-gradient(135deg, #19322D 0%, #61726F 100%);
     height: 99vh;
     width: 99vw;
     margin: -5vh 0vw 0vh 0vw;
