--- a/thinkmate/styles/Analysis.module.css
+++ b/thinkmate/styles/Analysis.module.css
@@ -1,5 +1,5 @@
 .selectButton {
-    width: 28vw;
+    width: 23vw;
     height: 90px;
     opacity: 0.7;
     margin: auto auto 10px auto;
@@ -8,7 +8,7 @@
     background: rgba(255, 255, 255, 0.5);
     border: 2px solid rgba(255, 255, 255, 0.3);
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-    color: #999999;
+    color: #FFF;
     text-align: center;
     font-size: 1.3rem;
     cursor: 'pointer';
